cambios en los end point agrega v1/api/